--- a/static/index.html
+++ b/static/index.html
@@ -12,10 +12,10 @@
    </head>
    <body>
       <div id="header">
-         <img src="logo.gif" alt="Logo">
+         <img src="‎ " alt="Logo">
       </div>
       <div id="content">
-         <h1>Search the Web and use the BEST static proxy!</h1>
+         <h1>‎ </h1>
 
          <form id="uv-form"">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
@@ -25,9 +25,6 @@
             <p id="uv-error"></p>
             <pre id="uv-error-code"></pre>
           </div>
-         <a href="https://discord.gg/zJhPJYJCeJ" target="_blank" class="fa-brands fa-discord"></a>
-         <a href="https://github.com/TheTIW/UV-Static" target="_blank"class="fa-brands fa-github"></a>
-         <a href="https://starttiw.org" target="_blank"class="fa-solid fa-cloud"></a>
       </div>
       <script src="uv/uv.bundle.js" defer></script>
       <script src="uv/uv.config.js" defer></script>
@@ -36,7 +33,6 @@
       <script src="index.js" defer></script>
       <script src="error.js" defer></script>
       <div id="footer">
-         <p>&copy; 2023 TIW. All rights reserved.</p>
       </div>
    </body>
 </html>
