--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
    </head>
    <body>
       <div id="header">
-         <img src="https://i.postimg.cc/DfpmD3CM/logo.png" alt="Logo">
+         <img src="https://i.postimg.cc/pTTRYptX/image-2024-05-22-231544739.png" alt="Logo">
       </div>
       <div id="content">
          <h1>‎ ‎ ‎ ‎ <h1>
