--- a/static/index.html
+++ b/static/index.html
@@ -11,14 +11,14 @@
    </head>
    <body>
       <div id="header">
-         <img src="https://i.postimg.cc/pTTRYptX/image-2024-05-22-231544739.png" alt="Logo">
+         <img src="https://i.postimg.cc/qqxPPrrZ/image-2024-05-22-232036851.png" alt="Logo">
       </div>
       <div id="content">
          <h1>‎ ‎ ‎ ‎ <h1>
 
          <form id="uv-form"">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
-            <input id="uv-address" type="text" placeholder="Search or input a link" class="form__input"/>
+            <input id="uv-address" type="text" placeholder="Search or input a URL" class="form__input"/>
           </form>
           <div class="desc left-margin">
             <p id="uv-error"></p>
