--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,7 @@
         <pre id="uv-error-code"></pre>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/zachywacky2/particles@main/particles.min.js"></script>
 <script>
     particlesJS('particles-js', {
         particles: {
