--- a/static/index.html
+++ b/static/index.html
@@ -36,10 +36,7 @@
         <p id="uv-error"></p>
         <pre id="uv-error-code"></pre>
     </div>
-</div>
-  <div id="particles-js"></div>
-
-       <style>
+    <style>
         /* Center the entire content */
         body {
             display: flex;
@@ -67,7 +64,53 @@
     <script>
         particlesJS('particles-js', {
             particles: {
-                // Other particle configuration options...
+                number: {
+                    value: 80,
+                    density: {
+                        enable: true,
+                        value_area: 800
+                    }
+                },
+                color: {
+                    value: '#ffffff'
+                },
+                shape: {
+                    type: 'circle',
+                    stroke: {
+                        width: 0,
+                        color: '#000000'
+                    },
+                    polygon: {
+                        nb_sides: 5
+                    }
+                },
+                opacity: {
+                    value: 0.5,
+                    random: false,
+                    anim: {
+                        enable: false,
+                        speed: 1,
+                        opacity_min: 0.1,
+                        sync: false
+                    }
+                },
+                size: {
+                    value: 3,
+                    random: true,
+                    anim: {
+                        enable: false,
+                        speed: 40,
+                        size_min: 0.1,
+                        sync: false
+                    }
+                },
+                line_linked: {
+                    enable: true,
+                    distance: 150,
+                    color: '#ffffff',
+                    opacity: 0.4,
+                    width: 1
+                },
                 move: {
                     enable: true,
                     speed: 6,
@@ -84,10 +127,37 @@
                 }
             },
             interactivity: {
-                // Other interactivity options...
+                detect_on: 'canvas',
+                events: {
+                    onhover: {
+                        enable: true,
+                        mode: 'repulse'
+                    },
+                    onclick: {
+                        enable: true,
+                        mode: 'push'
+                    },
+                    resize: true
+                },
                 modes: {
+                    grab: {
+                        distance: 400,
+                        line_linked: {
+                            opacity: 1
+                        }
+                    },
+                    bubble: {
+                        distance: 400,
+                        size: 40,
+                        duration: 2,
+                        opacity: 8,
+                        speed: 3
+                    },
                     repulse: {
                         distance: 200
+                    },
+                    push: {
+                        particles_nb: 4
                     }
                 }
             }
