--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/jpg" href="~/favicon.ico"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <style>
         /* Center the entire content */
         body {
@@ -27,7 +27,7 @@
 <body>
 <div id="particles-js"></div>
 <div id="content">
-    <h1>Your Title Goes Here</h1>
+    <h1>GameHub UB</h1>
     <form id="uv-form">
         <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/>
         <input id="uv-address" type="text" placeholder="Search or input a URL" class="form__input"/>
