--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
     <h1>GameHub UB</h1>
     <form id="uv-form">
         <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/>
-        <input id="uv-address" type="text" placeholder="Search or input a URL" class="form__input"/>
+        <input id="uv-address" type="text" placeholder="Search freely with GameHub... " class="form__input"/>
     </form>
     <div class="desc left-margin">
         <p id="uv-error"></p>
