--- a/static/index.html
+++ b/static/index.html
@@ -27,10 +27,10 @@
 <body>
 <div id="particles-js"></div>
 <div id="content">
-    <h1>GameHub UB</h1>
+    <h1>GlacierArcade UB</h1>
     <form id="uv-form">
         <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/>
-        <input id="uv-address" type="text" placeholder="Search freely with GameHub... " class="form__input"/>
+        <input id="uv-address" type="text" placeholder="Search freely with GlacierArcade..." class="form__input"/>
     </form>
     <div class="desc left-margin">
         <p id="uv-error"></p>
