--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
 <body>
 <div id="particles-js"></div>
 <div id="content">
-    <h1>Glacier Arcade</h1>
+                            <h1 class="gtext">Glacier Arcade</h1>
   <form id="uv-form">
       <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden" />
       <div class="search-container">
