--- a/static/index.html
+++ b/static/index.html
@@ -83,7 +83,7 @@
   <form id="uv-form">
       <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden" />
       <div class="search-container">
-          <input id="uv-address" type="text" placeholder="Search with freedom..." class="form__input" />
+          <input id="uv-address" type="text" placeholder="Search without restrictions..." class="form__input" />
       </div>
   </form>
 
