--- a/static/404.html
+++ b/static/404.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="index.css">
+
   <head>
     <meta charset="utf-8" />
     <meta
@@ -7,41 +9,28 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <title>Ultraviolet | Error</title>
-    <meta
-      name="description"
-      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
-    />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: dark)"
-      content="#434c5e"
-    />
-    <meta name="googlebot" content="noindex, nofollow, nosnippet" />
+
     <base href="/" />
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
   </head>
+  <link rel="stylesheet" href="index.css">
 
   <body>
     <div class="logo-wrapper left-margin">
-      <h1>Ultraviolet | Error</h1>
+      <h1>Glacier Arcade | Error</h1>
     </div>
     <div class="desc left-margin">
-      <p>The server could not route your request.</p>
+      <p>We encountered an unexpected service interruption. To proceed, please click 'Retry' and resubmit your request.</p>
       <p id="uv-error"></p>
       <code id="uv-error-code"></code>
       <button id="uv-register-sw" value="Register service worker">
-        Register ServiceWorker
+        Retry
       </button>
     </div>
     <footer>
-      <a
-        title="License information"
-        href="credits.html"
-        style="margin-left: auto"
-        >Credits</a
-      >
-      <span>Ultraviolet &copy; TN 2022</span>
+   
+      <span>Credits to TN for Ultraviolet</span>
     </footer>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
