--- a/static/index.html
+++ b/static/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
 <div id="content">
-    <h1 class="gtext">Glacier Arcade</h1>
+    <h1 class="gtext">Glacier Arcade Рrоху</h1>
   <form id="uv-form">
       <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden" />
       <div class="search-container">
