--- a/static/404.html
+++ b/static/404.html
@@ -9,7 +9,16 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <title>Ultraviolet | Error</title>
-
+    <meta
+      name="description"
+      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#434c5e"
+    />
+    <meta name="googlebot" content="noindex, nofollow, nosnippet" />
     <base href="/" />
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
