--- a/static/404.html
+++ b/static/404.html
@@ -1,49 +1,95 @@
 <!DOCTYPE html>
-<html>
-  <link rel="stylesheet" href="index.css">
+<html lang="en">
 
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <title>Ultraviolet | Error</title>
-    <meta
-      name="description"
-      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
-    />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: dark)"
-      content="#434c5e"
-    />
-    <meta name="googlebot" content="noindex, nofollow, nosnippet" />
-    <base href="/" />
-    <link rel="shortcut icon" content="favicon.ico" />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <link rel="stylesheet" href="index.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Glacier Arcade | Error</title>
+  <meta name="description"
+    content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
+  <meta name="googlebot" content="noindex, nofollow, nosnippet">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Lexend', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #2c2f33;
+      color: #ffffff;
+    }
 
-  <body>
-    <div class="logo-wrapper left-margin">
+    .container {
+      text-align: center;
+      padding: 40px;
+      border: 1px solid #424549;
+      border-radius: 10px;
+      background-color: #36393f;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      margin: 0 0 20px;
+      font-size: 2.5em;
+      color: #ffffff;
+    }
+
+    p {
+      margin: 20px 0;
+      font-size: 1.2em;
+      color: #b9bbbe;
+    }
+
+    button {
+      padding: 15px 30px;
+      font-size: 1em;
+      color: #ffffff;
+      background-color: #6c757d;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #5a6268;
+    }
+
+    footer {
+      margin-top: 20px;
+      font-size: 0.9em;
+      color: #b9bbbe;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <header>
       <h1>Glacier Arcade | Error</h1>
-    </div>
-    <div class="desc left-margin">
-      <p>We encountered an unexpected service interruption. To proceed, please click 'Retry' and resubmit your request.</p>
+    </header>
+    <main>
+      <p>We encountered an unexpected service interruption. To proceed, please click 'Retry' and resubmit your request.
+      </p>
       <p id="uv-error"></p>
       <code id="uv-error-code"></code>
       <button id="uv-register-sw" value="Register service worker">
         Retry
       </button>
-    </div>
+    </main>
     <footer>
-   
       <span>Credits to TN for Ultraviolet</span>
     </footer>
-    <script src="uv/uv.bundle.js"></script>
-    <script src="uv/uv.config.js"></script>
-    <script src="register-sw.js"></script>
-    <script src="error.js"></script>
-  </body>
+  </div>
+</body>
+<script src="uv/uv.bundle.js"></script>
+<script src="uv/uv.config.js"></script>
+<script src="register-sw.js"></script>
+<script src="error.js"></script>
+
 </html>
