--- a/static/404.html
+++ b/static/404.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <link rel="stylesheet" href="index.css">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Glacier Arcade | Error</title>
-  <meta name="description"
-    content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!">
-  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
-  <meta name="googlebot" content="noindex, nofollow, nosnippet">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <title>Ultraviolet | Error</title>
+    <meta
+      name="description"
+      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#434c5e"
+    />
+    <meta name="googlebot" content="noindex, nofollow, nosnippet" />
+    <base href="/" />
+    <link rel="shortcut icon" content="favicon.ico" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <link rel="stylesheet" href="index.css">
   <style>
     body {
       font-family: 'Lexend', sans-serif;
@@ -66,30 +79,26 @@
       color: #b9bbbe;
     }
   </style>
-</head>
-
-<body>
-  <div class="container">
-    <header>
+  <body>
+    <div class="container">
+    <div class="logo-wrapper left-margin">
       <h1>Glacier Arcade | Error</h1>
-    </header>
-    <main>
-      <p>We encountered an unexpected service interruption. To proceed, please click 'Retry' and resubmit your request.
-      </p>
+    </div>
+    <div class="desc left-margin">
+      <p>We encountered an unexpected service interruption. To proceed, please click 'Retry' and resubmit your request.</p>
       <p id="uv-error"></p>
       <code id="uv-error-code"></code>
       <button id="uv-register-sw" value="Register service worker">
         Retry
       </button>
-    </main>
+    </div>
     <footer>
+
       <span>Credits to TN for Ultraviolet</span>
     </footer>
-  </div>
-</body>
-<script src="uv/uv.bundle.js"></script>
-<script src="uv/uv.config.js"></script>
-<script src="register-sw.js"></script>
-<script src="error.js"></script>
-
+    <script src="uv/uv.bundle.js"></script>
+    <script src="uv/uv.config.js"></script>
+    <script src="register-sw.js"></script>
+    <script src="error.js"></script>
+  </body>
 </html>
